--- a/Gestion AcademicoAdministrativa Abastos/MainWindow.xaml
+++ b/Gestion AcademicoAdministrativa Abastos/MainWindow.xaml
@@ -76,7 +76,9 @@
                             </LinearGradientBrush>
                         </Grid.Background>
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="100*" />
+                            <ColumnDefinition Width="5*" />
+                            <ColumnDefinition Width="90*" />
+                            <ColumnDefinition Width="5*" />
                         </Grid.ColumnDefinitions>
                         <Grid.RowDefinitions>
                             <RowDefinition Height="12*" />
@@ -88,8 +90,8 @@
                             <RowDefinition Height="12*" />
                             <RowDefinition Height="12*" />
                         </Grid.RowDefinitions>
-                        <Label Grid.Row="0" Content="Identificación"/>
-                        <Grid Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                        <Label Grid.Column="1" Grid.Row="0" Content="Identificación"/>
+                        <Grid Grid.Column="1" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="25*" />
                                 <RowDefinition Height="75*" />
@@ -104,8 +106,8 @@
                             <Label Grid.Column="2" Content="NIF"/>
                             <TextBox x:Name="TxtNif" Grid.Column="2" Grid.Row="1" Text="Lorem ipsum" IsReadOnly="True" Margin="15"/>
                         </Grid>
-                        <Label Grid.Row="2" Content="Personalización"/>
-                        <Grid Grid.Row="3" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                        <Label Grid.Column="1" Grid.Row="2" Content="Personalización"/>
+                        <Grid Grid.Column="1" Grid.Row="3" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="25*" />
                                 <RowDefinition Height="75*" />
@@ -120,8 +122,8 @@
                             <Label Grid.Column="2" Content="Apellidos"/>
                             <TextBox x:Name="TxtApellidos" Grid.Column="2" Grid.Row="1" Text="Lorem ipsum" IsReadOnly="True" Margin="15"/>
                         </Grid>
-                        <Label Grid.Row="4" Content="Datos de Contacto"/>
-                        <Grid Grid.Row="5" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                        <Label Grid.Column="1" Grid.Row="4" Content="Datos de Contacto"/>
+                        <Grid Grid.Column="1" Grid.Row="5" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="25*" />
                                 <RowDefinition Height="75*" />
@@ -138,8 +140,8 @@
                                 
                             </DataGrid>
                         </Grid>
-                        <Label Grid.Row="6" Content="Datos especiales del Rol"/>
-                        <Grid Grid.Row="7" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                        <Label Grid.Column="1" Grid.Row="6" Content="Datos especiales del Rol"/>
+                        <Grid Grid.Column="1" Grid.Row="7" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
 
                         </Grid>
                     </Grid>
