--- a/Gestion AcademicoAdministrativa Abastos/Reclamaciones.xaml
+++ b/Gestion AcademicoAdministrativa Abastos/Reclamaciones.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="Posibles_Interfaces_de_Usuario.Reclamaciones"
+﻿<Window x:Class="Gestion_AcademicoAdministrativa_Abastos.Reclamaciones"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Posibles_Interfaces_de_Usuario"
+        xmlns:local="clr-namespace:Gestion_AcademicoAdministrativa_Abastos"
         mc:Ignorable="d"
         Title="Reclamaciones" Height="450" Width="800">
     <Grid x:Name="Container" Grid.Row="1" Background="#FF15171B" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
@@ -36,8 +36,31 @@
                         <RowDefinition Height="90*" />
                         <RowDefinition Height="5*" />
                     </Grid.RowDefinitions>
-                    <DockPanel>
-                    </DockPanel>
+                    <Grid Grid.Column="1" Grid.Row="1">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="100*" />
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="5*" />
+                            <RowDefinition Height="28*" />
+                            <RowDefinition Height="5*" />
+                            <RowDefinition Height="28*" />
+                            <RowDefinition Height="5*" />
+                            <RowDefinition Height="28*" />
+                        </Grid.RowDefinitions>
+                        <Label Grid.Row="0" Content="Todas"/>
+                        <Grid Grid.Row="1" >
+
+                        </Grid>
+                        <Label Grid.Row="2" Content="En trámite"/>
+                        <Grid Grid.Row="3" >
+
+                        </Grid>
+                        <Label Grid.Row="4" Content="Tramitadas"/>
+                        <Grid Grid.Row="5" >
+
+                        </Grid>
+                    </Grid>
                 </Grid>
             </Grid>
         </Grid>
