--- a/Gestion AcademicoAdministrativa Abastos/Reclamaciones.xaml
+++ b/Gestion AcademicoAdministrativa Abastos/Reclamaciones.xaml
@@ -49,9 +49,9 @@
                             <RowDefinition Height="5*" />
                             <RowDefinition Height="25*" />
                         </Grid.RowDefinitions>
-                        <WrapPanel HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                        <Grid Grid.Row="0" Grid.Column="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
                             <Button Content="Crear Reclamacion" />
-                        </WrapPanel>
+                        </Grid>
                         <Label Grid.Row="1" Content="Todas"/>
                         <Grid Grid.Row="2" >
 
