--- a/Gestion AcademicoAdministrativa Abastos/App.xaml
+++ b/Gestion AcademicoAdministrativa Abastos/App.xaml
@@ -7,6 +7,7 @@
         <ResourceDictionary >
             <ResourceDictionary.MergedDictionaries >
                 <ResourceDictionary Source="styles/Overall.xaml"/>
+                <ResourceDictionary Source="styles/Resources.xaml"/>
                 <ResourceDictionary Source="styles/DataGrid.xaml"/>
                 <ResourceDictionary Source="styles/ScrollBar.xaml"/>
                 <ResourceDictionary Source="styles/Button.xaml"/>
