--- a/Gestion AcademicoAdministrativa Abastos/styles/Text.xaml
+++ b/Gestion AcademicoAdministrativa Abastos/styles/Text.xaml
@@ -17,7 +17,21 @@
     </Style>
     <Style TargetType="CheckBox" BasedOn="{StaticResource SpecialTextControl}">
         <Setter Property="Foreground" Value="White" />
+        <Setter Property="SnapsToDevicePixels"
+          Value="true" />
+        <Setter Property="FocusVisualStyle"
+          Value="{DynamicResource CheckBoxFocusVisual}" />
+        <Setter Property="Background" Value="{x:Null}"></Setter>
+        <Setter Property="BorderThickness" Value="5"></Setter>
+        <Setter Property="Background" Value="White" />
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Foreground" Value="White" />
+                <Setter Property="Background" Value="Black" />
+            </Trigger>
+        </Style.Triggers>
     </Style>
+
     <ControlTemplate x:Key="TextBoxBaseControlTemplate" TargetType="{x:Type TextBoxBase}">
         <Border Background="{TemplateBinding Background}" 
                 x:Name="Bd" BorderBrush="Transparent"
@@ -41,6 +55,7 @@
         <Setter Property="Template" Value="{StaticResource TextBoxBaseControlTemplate}" />
         <Setter Property="TextWrapping" Value="Wrap" />
     </Style>
+
     <ControlTemplate x:Key="passwordbox" TargetType="{x:Type PasswordBox}">
         <Border Background="{TemplateBinding Background}" 
         x:Name="Bd" BorderBrush="#FFE6DDDD"
