--- a/Gestion AcademicoAdministrativa Abastos/Buscador.xaml
+++ b/Gestion AcademicoAdministrativa Abastos/Buscador.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Gestion_AcademicoAdministrativa_Abastos.Buscador" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:local="clr-namespace:Gestion_AcademicoAdministrativa_Abastos" mc:Ignorable="d" Title="Buscador" Height="720" Width="1280">
+﻿<Window x:Class="Gestion AcademicoAdministrativa Abastos.Buscador" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:local="clr-namespace:Gestion AcademicoAdministrativa Abastos" mc:Ignorable="d" Title="Buscador" Height="720" Width="1280">
 
     <Grid x:Name="Container" Grid.Row="1" Background="#FF15171B" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
         <Grid x:Name="MainGridContent" Grid.Row="1" Background="#FF15171B" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
