--- a/Gestion AcademicoAdministrativa Abastos/Configuration.xaml
+++ b/Gestion AcademicoAdministrativa Abastos/Configuration.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="Posibles_Interfaces_de_Usuario.Configuration"
+﻿<Window x:Class="Gestion AcademicoAdministrativa Abastos.Configuration"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Gestion_AcademicoAdministrativa_Abastos"
+        xmlns:local="clr-namespace:Gestion AcademicoAdministrativa Abastos"
         mc:Ignorable="d"
         Title="Configuration" Height="800" Width="600">
     <Grid Background="DarkGray">
@@ -23,9 +23,9 @@
             <RowDefinition Height="5*" />
         </Grid.RowDefinitions>
         <Label Content="Tamaño de la fuente" Grid.Column="1" Grid.Row="1" />
-        <Slider x:Name="SliderFontSize" Grid.Column="1" Grid.Row="2" HorizontalAlignment="Stretch" HorizontalContentAlignment="Center" VerticalAlignment="Center"/>
+        <Slider x:Name="SliderFontSize" Grid.Column="1" Grid.Row="2" HorizontalAlignment="Stretch" HorizontalContentAlignment="Center" VerticalAlignment="Center" ValueChanged="SliderFontSize_ValueChanged"/>
         <Label Content="Familia de la fuente" Grid.Column="1" Grid.Row="3" />
-        <ComboBox x:Name="ComboBoxFontFamily" Grid.Column="1" Grid.Row="4" />
+        <ComboBox x:Name="ComboBoxFontFamily" Grid.Column="1" Grid.Row="4" SelectionChanged="ComboBoxFontFamily_SelectionChanged"/>
         <Button x:Name="BtnSaveConfiguration" Content="Guardar Configuración" Grid.Column="1" Grid.Row="6"/>
     </Grid>
 </Window>
