--- a/Gestion AcademicoAdministrativa Abastos/Reclamaciones.xaml
+++ b/Gestion AcademicoAdministrativa Abastos/Reclamaciones.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="Gestion_AcademicoAdministrativa_Abastos.Reclamaciones"
+﻿<Window x:Class="Gestion AcademicoAdministrativa Abastos.Reclamaciones"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Gestion_AcademicoAdministrativa_Abastos"
+        xmlns:local="clr-namespace:Gestion AcademicoAdministrativa Abastos"
         mc:Ignorable="d"
         Title="Reclamaciones" Height="450" Width="800">
     <Grid x:Name="Container" Grid.Row="1" Background="#FF15171B" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
