--- a/Gestion_AcademicoAdministrativa_Abastos/Configuration.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/Configuration.xaml
@@ -23,7 +23,10 @@
             <RowDefinition Height="5*" />
         </Grid.RowDefinitions>
         <Label Content="Tamaño de la fuente" Grid.Column="1" Grid.Row="1" />
-        <Slider x:Name="SliderFontSize" Grid.Column="1" Grid.Row="2" HorizontalAlignment="Stretch" HorizontalContentAlignment="Center" VerticalAlignment="Center" ValueChanged="SliderFontSize_ValueChanged"/>
+        <Slider x:Name="SliderFontSize" Grid.Column="1" Grid.Row="2"
+                Minimum="8" Value="15" Maximum="32"
+                HorizontalAlignment="Stretch" HorizontalContentAlignment="Center" VerticalAlignment="Center"
+                ValueChanged="SliderFontSize_ValueChanged"/>
         <Label Content="Familia de la fuente" Grid.Column="1" Grid.Row="3" />
         <ComboBox x:Name="ComboBoxFontFamily" Grid.Column="1" Grid.Row="4" SelectionChanged="ComboBoxFontFamily_SelectionChanged"/>
         <Button x:Name="BtnSaveConfiguration" Content="Guardar Configuración" Grid.Column="1" Grid.Row="6"/>
