--- a/Gestion_AcademicoAdministrativa_Abastos/LogIn.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/LogIn.xaml
@@ -127,9 +127,9 @@
                 <TextBox VerticalContentAlignment="Center" x:Name="UsernameField" Grid.Column="1" Grid.Row="2"></TextBox>
                 <Label Grid.Column="1" Grid.Row="4" VerticalAlignment="Center" Content="contraseña" Background="{x:Null}"></Label>
                 <PasswordBox VerticalContentAlignment="Center" x:Name="PasswordeField" Grid.Column="1" Grid.Row="5" FontFamily="ms-appx:///Assets/PassDot.ttf#PassDot" />
-                <Button x:Name="LogInButton" Content="Iniciar sesión" Grid.Column="1" Grid.Row="7" Click="LogInButton_Click" />
+                <Button x:Name="LogInButton" Content="Iniciar sesión" Grid.Column="1" Grid.Row="7" Click="LogInButton_Click"/>
                     <CheckBox Grid.Column="1" Grid.Row="8" x:Name="CheckSaveInformation" Content="Guardar combinación de Usuario/Contraseña" HorizontalAlignment="Center"/>
-                    <Button x:Name="UrlLinker" Grid.Column="1" Grid.Row="9" Click="UrlLinker_Click" HorizontalAlignment="Center" VerticalAlignment="Center" Content="Consultar Información">
+                    <Button x:Name="UrlLinker" Grid.Column="1" Grid.Row="9" Click="UrlLinker_Click" HorizontalAlignment="Center" VerticalAlignment="Center" Content="Consultar Información" Style="{StaticResource basicButton}">
                     <Button.Template>
                         <ControlTemplate TargetType="{x:Type Button}">
                             <ContentPresenter />
