--- a/Gestion_AcademicoAdministrativa_Abastos/App.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Gestion_AcademicoAdministrativa_Abastos"
-             StartupUri="SplashScreen.xaml">
+             StartupUri="Configuration.xaml">
     <Application.Resources>
         <ResourceDictionary >
             <ResourceDictionary.MergedDictionaries >
