--- a/Gestion_AcademicoAdministrativa_Abastos/Strings/Constants.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/Strings/Constants.xaml
@@ -65,11 +65,14 @@
     <sys:String x:Key="FormDepartamentoRemovalTabItemHeader">Eliminar Departamento</sys:String>
     <sys:String x:Key="FormDepartamentoModifyTabItemHeader">Modificar Departamento</sys:String>
 
+    <sys:String x:Key="FormHorarioComboBoxCurso">Curso</sys:String>
+    <sys:String x:Key="FormHorarioComboBoxCursoExample">Seleccione un Curso</sys:String>
     <sys:String x:Key="FormHorarioHoraInicio">Horario Inicio</sys:String>
-    <sys:String x:Key="FormHorarioHoraInicioExample">2</sys:String>
-    <sys:String x:Key="FormHorarioHoraFinal">Nombre</sys:String>
-    <sys:String x:Key="FormHorarioHoraFinalExample">Ingles</sys:String>
-    <sys:String x:Key="FormHorarioAula">Aula</sys:String>
+    <sys:String x:Key="FormHorarioHoraInicioExample">00:00:00</sys:String>
+    <sys:String x:Key="FormHorarioHoraFinal">Horario Final</sys:String>
+    <sys:String x:Key="FormHorarioHoraFinalExample">00:00:00</sys:String>
+    <sys:String x:Key="FormHorarioComboBoxAsignatura">Asignatura</sys:String>
+    <sys:String x:Key="FormHorarioComboBoxAsignaturaExample">Seleccione una Asignatura</sys:String>
     <sys:String x:Key="FormHorarioCreationButton">Crear Horario</sys:String>
     <sys:String x:Key="FormHorarioRemoveButton">Eliminar Horario</sys:String>
     <sys:String x:Key="FormHorarioCreationTabItemHeader">Crear Horario</sys:String>
